--- a/src/pages/posts/cookies.mdx
+++ b/src/pages/posts/cookies.mdx
@@ -6,31 +6,32 @@ date: 2023-03-10
 description: Beskrivning av en webbkaka. Hur, när och varför det används.
 author: Emile Zyka.
 soruces:
-  [
-    https://developer.mozilla.org/en-US/docs/Web/HTTP/Cookies#creating_cookies,
-    https://learn.microsoft.com/en-us/previous-versions/aspnet/ms178194(v=vs.100),
-  ]
+    [
+        https://developer.mozilla.org/en-US/docs/Web/HTTP/Cookies#creating_cookies,
+        https://learn.microsoft.com/en-us/previous-versions/aspnet/ms178194(v=vs.100),
+    ]
 tags: [Webbkaka, kakfil, kaka, cookie]
 sectiontitles: ['Hur funkar det?', 'När används det?', 'Varför används det?']
 sections: [
-    ("En webbkaka består av en liten datafil som initalt skickas med från en webbserver när
-    en förfrågning skickas från en webbläsare till en webbserver. Konkret innebär det att
-    när en anvädare besöker en webbsida kan hemsidan tillhandahålla informationen som finns
-    i användarens webbkaka. Webbsidan kan också skicka en webbkaka till användaren som innehåller
-    data. Till exempel datum och tid för användarens besök. Om användaren besöker webbsidan igen
-    kan den webbsidan känna igen webbkakan som är kopplad till den specifika webbadressen.
-    Därmed kan webbsidan extrahera och använda webbkakans data för att avgöra när användaren senast besökt webbplatsen. En webbläsare lagrar vanligtvis alla cookies för olika webbplatser separat.
-    Webbkakor kan också sparas lokal i hårddisken på din enhet (t.ex. dator,
-    mobil eller surfplatta).
-    Det finns flera olika typer av webbkakor med olika användningsområden och livscyklar.
+        ("En webbkaka består av en liten datafil som initalt skickas med från en webbserver när
+        en förfrågning skickas från en webbläsare till en webbserver. Konkret innebär det att
+        när en anvädare besöker en webbsida kan hemsidan tillhandahålla informationen som finns
+        i användarens webbkaka. Webbsidan kan också skicka en webbkaka till användaren som innehåller
+        data. Till exempel datum och tid för användarens besök. Om användaren besöker webbsidan igen
+        kan den webbsidan känna igen webbkakan som är kopplad till den specifika webbadressen.
+        Därmed kan webbsidan extrahera och använda webbkakans data för att avgöra när användaren senast besökt webbplatsen.
+        En webbläsare lagrar vanligtvis alla cookies för olika webbplatser separat. Webbkakor kan också sparas lokalt i hårddisken
+        på din enhet (t.ex. dator,
 
-    En sessionskaka finns kvar ända till dess att sessionen avbryts. Lägg dock märke till
-    att vad definieras som en "avbryten session" definieras av din webbläsare. Dessutom kan
-    webbläsare återuppta dina avbrytna sessionskakor när den startas om. I praktiken innebär
-    det att sessionskakor kan finnas kvar för evigt.
+        mobil eller surfplatta). Det finns flera olika typer av webbkakor med olika användningsområden och livscyklar.
 
-    En beständig webbkaka lagras vanligtvis lokalt på din enhet och...."),
-    '',
-    '',
-  ]
+        En sessionskaka finns kvar ända till dess att sessionen avbryts. Lägg dock märke till
+        att vad definieras som en "avbryten session" definieras av din webbläsare. Dessutom kan
+        webbläsare återuppta dina avbrytna sessionskakor när den startas om. I praktiken innebär
+        det att sessionskakor kan finnas kvar för evigt.
+
+        En beständig webbkaka lagras vanligtvis lokalt på din enhet och"),
+        '',
+        '',
+    ]
 ---
