--- a/src/pages/posts/cookies.mdx
+++ b/src/pages/posts/cookies.mdx
@@ -1,5 +1,6 @@
 ---
 layout: '../../layouts/Post.astro'
+path: './posts/cookies/'
 title: Vad är en webbkaka?
 subtitle: Hur, när och varför används webbkakor?
 date: 2023-03-10
@@ -9,29 +10,13 @@ soruces:
     [
         https://developer.mozilla.org/en-US/docs/Web/HTTP/Cookies#creating_cookies,
         https://learn.microsoft.com/en-us/previous-versions/aspnet/ms178194(v=vs.100),
+        https://www.geeksforgeeks.org/explain-persistent-cookie/,
     ]
 tags: [Webbkaka, kakfil, kaka, cookie]
-sectiontitles: ['Hur funkar det?', 'När används det?', 'Varför används det?']
-sections: [
-        ("En webbkaka består av en liten datafil som initalt skickas med från en webbserver när
-        en förfrågning skickas från en webbläsare till en webbserver. Konkret innebär det att
-        när en anvädare besöker en webbsida kan hemsidan tillhandahålla informationen som finns
-        i användarens webbkaka. Webbsidan kan också skicka en webbkaka till användaren som innehåller
-        data. Till exempel datum och tid för användarens besök. Om användaren besöker webbsidan igen
-        kan den webbsidan känna igen webbkakan som är kopplad till den specifika webbadressen.
-        Därmed kan webbsidan extrahera och använda webbkakans data för att avgöra när användaren senast besökt webbplatsen.
-        En webbläsare lagrar vanligtvis alla cookies för olika webbplatser separat. Webbkakor kan också sparas lokalt i hårddisken
-        på din enhet (t.ex. dator,
-
-        mobil eller surfplatta). Det finns flera olika typer av webbkakor med olika användningsområden och livscyklar.
-
-        En sessionskaka finns kvar ända till dess att sessionen avbryts. Lägg dock märke till
-        att vad definieras som en "avbryten session" definieras av din webbläsare. Dessutom kan
-        webbläsare återuppta dina avbrytna sessionskakor när den startas om. I praktiken innebär
-        det att sessionskakor kan finnas kvar för evigt.
-
-        En beständig webbkaka lagras vanligtvis lokalt på din enhet och"),
-        '',
-        '',
+sectiontitles: ['Hur funkar det?', 'Varför används det?']
+sections:
+    [
+        'En webbkaka består av en liten datafil som initalt skickas med från en webbserver nären förfrågning skickas från en webbläsare till en webbserver. Konkret innebär det attnär en anvädare besöker en webbsida kan hemsidan tillhandahålla informationen som finnsi användarens webbkaka. Webbsidan kan också skicka en webbkaka till användaren som innehållerdata. Till exempel datum och tid för användarens besök. Om användaren besöker webbsidan igenkan den webbsidan känna igen webbkakan som är kopplad till den specifika webbadressen.Därmed kan webbsidan extrahera och använda webbkakans data för att avgöra när användaren senast besökt webbplatsen.En webbläsare lagrar vanligtvis alla cookies för olika webbplatser separat. Webbkakor kan också sparas lokalt i hårddiskenpå din enhet (t.ex. dator mobil eller surfplatta). Det finns flera olika typer av webbkakor med olika användningsområden och livscyklarEn sessionskaka existerar temporärt tills dess att användaren stänger ner sin webbläsaredet vill säga tills dess att sessionen avbryts. Emellertid så kan webbläsare oftast återuppta dinaabbrytna sessionskakor vilket i praktiken innebär att de kan finnas kvar även efter avslutat sessionEn beständig webbkaka lagras lokalt på din dator även när du stängt ner din webbläsare. En beständigwebbkaka består vanligtvis av minst fyra egenskaper. Ett namn associerad data, ett utgångsdatum och samt en filväg som motsvarar där kakan lagras.',
+        'Båda typerna av webbkakor används för att spara undan information om besökaren. Det kan vara användarens inloggningsuppgifter inställningar och preferenser på hemsidan. I sin tur kan denna information användas för att förbättra användarupplevelsen genom bespara användaren tiden att behöva fylla i alla sin uppgifter igen. Webbkakor kan även används i marknadsföringssyfte. Här kan data som till exempel hur länge en användare befunnit sig på en hemsida vilken hemsida den besökt språk vilken enhet användaren använd vilka aktioner den utfört på hemsidan användas för att skräddarsy marknadskampanjer.',
     ]
 ---
