--- a/src/pages/posts/arkitektur.mdx
+++ b/src/pages/posts/arkitektur.mdx
@@ -1,12 +1,14 @@
 ---
 layout: '../../layouts/Post.astro'
-path: './posts/arkitektur/'
+path: './arkitektur/'
 title: Vad är arkitektur?
 subtitle: Hur, när och varför används webbkakor?
+synonyms: []
 date: 2023-03-13
+img: {}
 category: Spårning
 description: Beskrivning av en webbkaka. Hur, när och varför det används.
-author: Emile Zyka.
+author: Emil Zyka
 soruces: []
 tags: [arkitektur]
 sectiontitles: ['Hur funkar det?', 'Varför används det?']
