styled articles page

--- a/src/pages/posts/arkitektur.mdx
+++ b/src/pages/posts/arkitektur.mdx
@@ -1,9 +1,8 @@
 ---
 layout: '../../layouts/Post.astro'
-path: './arkitektur/'
 title: Vad är arkitektur?
 subtitle: Hur, när och varför används webbkakor?
-synonyms: []
+hashtags: []
 date: 2023-03-13
 img: {}
 category: Spårning
