--- a/src/pages/posts/cookies.mdx
+++ b/src/pages/posts/cookies.mdx
@@ -1,13 +1,13 @@
 ---
 layout: '../../layouts/Post.astro'
-path: './cookies/'
 title: Vad är en webbkaka?
-subtitle: Hur, när och varför används webbkakor?
-synonyms: ['Webbkaka', 'kakfil', 'kaka', 'cookie']
+subtitle: Hur fungerar webbkakor och varför används det?
+hashtags: ['Webbkaka', 'kakfil', 'kaka', 'cookie']
 date: 2023-03-10
 category: Arkitektur
 img: { src: '/src/img/cookie.jpg', alt: 'A picture of a cookie' }
-description: Beskrivning av en webbkaka. Hur, när och varför det används.
+description: 'Kakor används för att lagra information om besökaren. Det finns olika typer av kakor med olika användningsområden. Men hur fungerar kakor egentligen, 
+varför används dem och vilka regler finns det?' 
 author: Emil Zyka
 soruces:
   [
