changed project description

--- a/src/pages/posts/arkitektur.mdx
+++ b/src/pages/posts/arkitektur.mdx
@@ -4,7 +4,11 @@ title: Vad är arkitektur?
 subtitle: Hur, när och varför används webbkakor?
 hashtags: []
 date: 2023-03-13
-img: {}
+img:
+  {
+    src: '/src/img/ClientServerModel.jpg',
+    alt: 'A picture of the Client-server-model',
+  }
 category: Spårning
 description: Beskrivning av en webbkaka. Hur, när och varför det används.
 author: Emil Zyka
