migrated to astro v.2, with cotent collections

--- a/src/content/articles/cookies.mdx
+++ b/src/content/articles/cookies.mdx
@@ -1,11 +1,10 @@
 ---
-layout: '../../layouts/Post.astro'
 title: Vad är en webbkaka?
 subtitle: Hur fungerar webbkakor och hur används de?
 hashtags: ['Cookie', 'Analytics', 'Marknadsföring', 'Datalagring']
 difficulty: introduktion
 date: 2023-03-10
-category: Arkitektur
+category: Annat
 img: { src: '/src/img/cookie.jpg', alt: 'A picture of a cookie' }
 description: 'Kakor används för att lagra information om besökaren. Det finns olika typer av kakor med olika användningsområden. Men hur fungerar kakor egentligen, 
 varför används dem och vilka regler finns det?' 
@@ -16,7 +15,7 @@ soruces:
     "https://learn.microsoft.com/en-us/previous-versions/aspnet/ms178194(v=vs.100)",
     "https://cookieinformation.com/sv/vad-ar-en-cookie/",
   ]
-tags: [Spårning, Kategori]
+tags: [Annat]
 sectiontitles: ['Vad är en webbkaka?', 'Varaktiga och sessions-kakor', "Vilken information spåras av kakor?", "Första och tredjepartskakor", "Cookies och säkerhet"]
 sections:
   [
