--- a/src/content/articles/arkitektur.mdx
+++ b/src/content/articles/arkitektur.mdx
@@ -1,19 +1,19 @@
 ---
-layout: '../../layouts/Post.astro'
 title: Vad är arkitektur?
 subtitle: Hur, när och varför används webbkakor?
 hashtags: []
+difficulty: introduktion
 date: 2023-03-13
 img:
   {
     src: '/src/img/ClientServerModel.jpg',
     alt: 'A picture of the Client-server-model',
   }
-category: Spårning
+category: Arkitektur
 description: Beskrivning av en webbkaka. Hur, när och varför det används.
 author: Emil Zyka
 soruces: []
-tags: [arkitektur]
+tags: [Arkitektur]
 sectiontitles: ['Hur funkar det?', 'Varför används det?']
 sections: ['blabla', 'absfjlksaf']
 ---
