--- a/src/content/articles/arkitektur.mdx
+++ b/src/content/articles/arkitektur.mdx
@@ -17,3 +17,23 @@ tags: [Arkitektur]
 sectiontitles: ['Hur funkar det?', 'Varför används det?']
 sections: ['blabla', 'absfjlksaf']
 ---
+
+<div class='flex flex-col items-center justify-center mt-8'>
+  <div class='flex flex-col w-2/5 sm:w-4/5 text-justify'>
+    <h1 class='text-left text-xl font-bold text-black dark:text-white my-4'>
+      MDX IS AWESOME!
+    </h1>
+    <h2 class='text-lg sm:text-base text-black dark:text-white'>
+      A great thing about MDX is that you can write markdown and specify a
+      component to be used instead of an HTML element. The following table lists
+      those HTML elements that can be overwritten, the needed markdown, and what
+      the normal JSX equivalent would be. A great thing about MDX is that you
+      can write markdown and specify a component to be used instead of an HTML
+      element. The following table lists those HTML elements that can be
+      overwritten, the needed markdown, and what the normal JSX equivalent would
+      be.
+    </h2>
+  </div>
+</div>
+
+https://mdxjs.com/table-of-components/
