styled article cards

--- a/src/content/articles/example.mdx
+++ b/src/content/articles/example.mdx
@@ -1,14 +1,10 @@
 ---
 title: afsfsa?
 subtitle: Hur, när och varför används webbkakor?
-hashtags: []
+hashtags: ['Cookie', 'Analytics']
 difficulty: introduktion
 date: 2023-03-14
-img:
-  {
-    src: '/src/img/ClientServerModel.jpg',
-    alt: 'A picture of the Client-server-model',
-  }
+img: { src: '/src/img/ClientServerModel.jpg', alt: 'A picture of the Client-server-model' }
 category: Arkitektur
 description: Beskrivning av en webbkaka. Hur, när och varför det används.
 author: Emil Zyka
@@ -19,21 +15,16 @@ sections: ['blabla', 'absfjlksaf']
 ---
 
 <div class='flex flex-col items-center justify-center mt-8'>
-  <div class='flex flex-col w-2/5 sm:w-4/5 text-justify'>
-    <h1 class='text-left text-xl font-bold text-black dark:text-white my-4'>
-      MDX IS AWESOME!
-    </h1>
-    <h2 class='text-lg sm:text-base text-black dark:text-white'>
-      A great thing about MDX is that you can write markdown and specify a
-      component to be used instead of an HTML element. The following table lists
-      those HTML elements that can be overwritten, the needed markdown, and what
-      the normal JSX equivalent would be. A great thing about MDX is that you
-      can write markdown and specify a component to be used instead of an HTML
-      element. The following table lists those HTML elements that can be
-      overwritten, the needed markdown, and what the normal JSX equivalent would
-      be.
-    </h2>
-  </div>
+    <div class='flex flex-col w-2/5 sm:w-4/5 text-justify'>
+        <h1 class='text-left text-xl font-bold text-black dark:text-white my-4'>MDX IS AWESOME!</h1>
+        <h2 class='text-lg sm:text-base text-black dark:text-white'>
+            A great thing about MDX is that you can write markdown and specify a component to be used instead of an HTML element. The
+            following table lists those HTML elements that can be overwritten, the needed markdown, and what the normal JSX equivalent would
+            be. A great thing about MDX is that you can write markdown and specify a component to be used instead of an HTML element. The
+            following table lists those HTML elements that can be overwritten, the needed markdown, and what the normal JSX equivalent would
+            be.
+        </h2>
+    </div>
 </div>
 
 https://mdxjs.com/table-of-components/
