--- a/src/content/articles/cookies.mdx
+++ b/src/content/articles/cookies.mdx
@@ -1,7 +1,7 @@
 ---
 title: Vad är en webbkaka?
 subtitle: Hur fungerar webbkakor och hur används de?
-hashtags: ['Cookie', 'Analytics', 'Marknadsföring', 'Datalagring']
+hashtags: ['Cookie', 'Analytics']
 difficulty: introduktion
 date: 2023-03-10
 category: Annat
