--- a/src/content/articles/cookies.mdx
+++ b/src/content/articles/cookies.mdx
@@ -16,16 +16,72 @@ soruces:
     "https://cookieinformation.com/sv/vad-ar-en-cookie/",
   ]
 tags: [Annat]
-sectiontitles: ['Vad är en webbkaka?', 'Varaktiga och sessions-kakor', "Vilken information spåras av kakor?", "Första och tredjepartskakor", "Cookies och säkerhet"]
+sectiontitles: []
 sections:
   [
-    'Cookies, eller kakor, är små textfiler som lagras i en webbläsare när någon besöker en webbplats. En webbplats kan både skicka och hämta kakor som tillhör besökaren.
-    Kakorna består av data som beskriver besökaren. Exakt vilken data som lagras i kakan varierar men det kan handla om platsinformation, datum och tid för användarens besök,
-    språkinställningar, utförda aktiviteter på webbsidan, användarvalda inställningar, användaruppgifter samt personlig identifierbar information. Kakor lagras vanligtvis i din
-    webbläsare men kan också sparas lokalt i hårddisken på din enhet. Det finns huvudsakligen två typer av kakor med olika användningsområden och livscyklar. Dessa är sessionskakor och varaktiga kakor.',
-    'En varaktig kaka lagras vanligtvis i en mapp, i hårddisken, på besökarens lokala enhet. Dessa kakor finns kvar i enheten ända tills dess att de når sitt utgångsdatum. När en besökare återkommer till en webbplats kan webbläsaren läsa in information som finns lagrad i kakan. En sessions-kaka lagras tillfälligt i webbläsaren och försvinner när besökaren avslutar sitt besök på webbplatsen. Den här typen av kakor används för att hålla reda på webbspecefika inställningar så som språk, ifyllda uppgifter i ett formulär eller för att förhindra att en webbplats efterfråga samma information flera gånger.',
-    'Den information som sparas i kakorna är vanligtvis krypterad vilket gör att det oftast är svårt att avgöra exakt vad som lagras. Oftast lagras dock både information om användarens beteende på webbplatsen samt information för att identifiera användaren. Information om användarens beteende kan vara till exempel: tid och datum för besök, inköpsinformation, aktivitet på hemsidan, integritetsinställningar samt sidvisningar. Information för att identifiera användaren kan vara olika typer av id:n, ip-adresser, inloggninsuppgifter, webbläsare och operativsystem.',
-    'Om en kaka används av och för den besökta webbplatsen benämns det som en förstapartskaka. Om kakan används av tjänster som sidan tillhandahåller eller implementerar benämns det som en tredjepartskaka. Förstapartskakor används för att förbättra användarupplevlsen på den besökta hemplatsen genom att hålla koll på en användares inställningar, aktivitet och inloggning. Tredjepartskakor används av externa företag genom den besökta webbplatsen. Dessa kan skapa profiler och målgrupper baserat på dina beteende och personuppgifter för att skräddarsy marknadserbjudanden, analyser och reklam.',
-    'Som bekant lagrar cookies en del "känslig information" så som geografisk plats, ip-adress, användaruppgifter och beteendemönster. Anvädningen av cookies är i allmänt hårt reglerade och bör inte utgöra en grund för orolighet. Kakor används i första hand för att förbättra användarupplevelsen och i marknadsföringssyfte. Som besökare har du möjlighet och rätt till att neka kakor. En webbplats ska också ge en beskrivning av alla dess kakor, deras syfte och livslängd. Därtill ska även besökaren kunna se en fullständig lista av tredjepartcookies. Kraven för inhämtning och lagring av personuppgifter i cookies lyder också under GDPR. Du bör dock alltid vara försiktig med att uppge personlig information på nätet. Om du vill förbli så annonyn som möjligt kan du justera inställningarna i din webbläsare samt installera add-ons som inaktiverar vissa typer av kakor.',
   ]
 ---
+
+<div class='flex flex-col items-center justify-center mt-8'>
+  <div class='flex flex-col w-4/5 max-w-2xl text-justify'>
+    <h1 class='text-left text-xl font-bold text-black dark:text-white my-4'>
+      Vad är en webbkaka?
+    </h1>
+    <h2 class='text-lg sm:text-base text-black dark:text-gray-400'>
+    Cookies, eller kakor, är små textfiler som lagras i en webbläsare när någon besöker en webbplats. En webbplats kan både skicka och hämta kakor som tillhör 
+    besökaren. Kakorna består av data som beskriver besökaren. Exakt vilken data som lagras i kakan varierar men det kan handla om 
+    platsinformation, datum och tid för användarens besök, språkinställningar, utförda aktiviteter på webbsidan, 
+    användarvalda inställningar, användaruppgifter samt personlig identifierbar information. Kakor lagras vanligtvis i din
+    webbläsare men kan också sparas lokalt i hårddisken på din enhet. 
+    Det finns huvudsakligen två typer av kakor med olika användningsområden och livscyklar. Dessa är sessionskakor och varaktiga kakor.
+    Om en kaka används av och för den besökta webbplatsen benämns det som en förstapartskaka. 
+    Om kakan används av tjänster som sidan tillhandahåller eller implementerar benämns det som en tredjepartskaka. 
+    Förstapartskakor används för att förbättra användarupplevlsen på den besökta hemplatsen genom att hålla koll 
+    på en användares inställningar, aktivitet och inloggning. Tredjepartskakor används av externa företag genom den besökta webbplatsen. 
+    Dessa kan skapa profiler och målgrupper baserat på dina beteende och personuppgifter för att 
+    skräddarsy marknadserbjudanden, analyser och reklam.
+    </h2>
+  </div>
+  <div class='flex flex-col w-4/5 max-w-2xl text-justify'>
+    <h1 class='text-left text-xl font-bold text-black dark:text-white my-4'>
+      Varaktiga och sessions-kakor
+    </h1>
+    <h2 class='text-lg sm:text-base text-black dark:text-gray-400'>
+    En varaktig kaka lagras vanligtvis i en mapp, i hårddisken, på besökarens lokala enhet. 
+    Dessa kakor finns kvar i enheten ända tills dess att de når sitt utgångsdatum. 
+    När en besökare återkommer till en webbplats kan webbläsaren läsa in information som finns lagrad i kakan. 
+    En sessions-kaka lagras tillfälligt i webbläsaren och försvinner när besökaren avslutar sitt besök på webbplatsen. 
+    Den här typen av kakor används för att hålla reda på webbspecefika inställningar så som språk, 
+    ifyllda uppgifter i ett formulär eller för att förhindra att en webbplats efterfråga samma information flera gånger.
+    </h2>
+  </div>
+  <div class='flex flex-col w-4/5 max-w-2xl text-justify'>
+    <h1 class='text-left text-xl font-bold text-black dark:text-white my-4'>
+      Vilken information spåras av kakor?
+    </h1>
+    <h2 class='text-lg sm:text-base text-black dark:text-gray-400'>
+    Den information som sparas i kakorna är vanligtvis krypterad vilket gör att det oftast är svårt att avgöra exakt vad som lagras. 
+    Oftast lagras dock både information om användarens beteende på webbplatsen samt information för att identifiera användaren. 
+    Information om användarens beteende kan vara till exempel: tid och datum för besök, inköpsinformation, aktivitet på hemsidan, 
+    integritetsinställningar samt sidvisningar. Information för att identifiera användaren kan vara olika typer av id:n, 
+    ip-adresser, inloggninsuppgifter, webbläsare och operativsystem.
+    </h2>
+  </div>
+    <div class='flex flex-col w-4/5 max-w-2xl text-justify'>
+    <h1 class='text-left text-xl font-bold text-black dark:text-white my-4'>
+      Cookies och säkerhet
+    </h1>
+    <h2 class='text-lg sm:text-base text-black dark:text-gray-400'>
+    'Som bekant lagrar cookies en del "känslig information" så som geografisk plats, ip-adress, användaruppgifter och beteendemönster. 
+    Anvädningen av cookies är i allmänt hårt reglerade och bör inte utgöra en grund för orolighet. 
+    Kakor används i första hand för att förbättra användarupplevelsen och i marknadsföringssyfte. 
+    Som besökare har du möjlighet och rätt till att neka kakor. 
+    En webbplats ska också ge en beskrivning av alla dess kakor, deras syfte och livslängd. 
+    Därtill ska även besökaren kunna se en fullständig lista av tredjepartcookies. 
+    Kraven för inhämtning och lagring av personuppgifter i cookies lyder också under GDPR. 
+    Du bör dock alltid vara försiktig med att uppge personlig information på nätet. 
+    Om du vill förbli så annonyn som möjligt kan du justera inställningarna i din 
+    webbläsare samt installera add-ons som inaktiverar vissa typer av kakor.
+    </h2>
+  </div>
+  </div>
