made everything look better

--- a/src/content/articles/roadmap.mdx
+++ b/src/content/articles/roadmap.mdx
@@ -13,3 +13,21 @@ tags: [Arkitektur]
 sectiontitles: ['Hur funkar det?', 'Varför används det?']
 sections: ['blabla', 'absfjlksaf']
 ---
+
+# CSS:
+
+css-frameworks:
+tailwind, https://tailwindcss.com/
+bootrstrap, https://getbootstrap.com/
+materialize, https://materializecss.com/
+bulma, https://bulma.io/
+
+CSS Pre-Processor:
+SASS: https://sass-lang.com/
+Variabler, nesting, funktioner, arv.
+
+Post css:
+https://postcss.org/
+implemented through js plugins.
+
+#
